# mycelix

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CNAME  COMMUNITY_TESTING.md  DEPLOYMENT.md  DEPLOYMENT_COMPLETE.md  DEPLOY_NOW.sh  DEPLOY_STEPS.md  DNS_SETUP.md  Dockerfile  LAUNCH_STRATEGY.md  README.md  RELEASE_v0.1.0.md  build.sh  check-dns.sh  demo.html  demo.sh  deploy-to-github.sh  deploy.sh  docker-compose.yml  index.html  install.sh  package.json  package.xml  prepare-github.sh  real-demo.html  signaling-server.js  start-signaling-server.sh  test_cmake_validity.sh  test_federated_learning  test_federated_learning.cpp  three_agent_demo  three_agent_demo.cpp
crates/feldman-dkg/: Cargo.toml
crates/mycelix-bridge-common/: Cargo.toml
crates/mycelix-bridge-entry-types/: Cargo.toml
crates/mycelix-core-types/: Cargo.toml  README.md  pyproject.toml
crates/mycelix-leptos-client/: Cargo.toml
crates/mycelix-leptos-core/: Cargo.toml
mycelix-attribution/: Cargo.toml  README.md  flake.nix  happ.yaml
mycelix-attribution/cli/: Cargo.toml
mycelix-attribution/dna/: dna.yaml
mycelix-attribution/prover/: Cargo.toml
mycelix-attribution/stark-common/: Cargo.toml
mycelix-attribution/tests/: Cargo.toml  sweettest_integration.rs
mycelix-attribution/verifier/: Cargo.toml
mycelix-civic/: Cargo.toml  README.md  deny.toml  flake.nix  happ.yaml
mycelix-civic/.github/: dependabot.yml
mycelix-civic/dna/: dna.yaml
mycelix-civic/tests/: Cargo.toml  lib.rs  sweettest_bridge_media.rs  sweettest_consciousness_gating.rs  sweettest_integration.rs  sweettest_justice_emergency.rs  sweettest_saga.rs
mycelix-climate/tests/: Cargo.toml  lib.rs
mycelix-commons/: Cargo.toml  README.md  deny.toml  flake.nix  happ-care.yaml  happ-land.yaml  happ.yaml
mycelix-commons/.github/: dependabot.yml
mycelix-commons/dna/: commons-care.yaml  commons-land.yaml  dna.yaml
mycelix-commons/scripts/: seed-support-knowledge.ts
mycelix-commons/tests/: Cargo.toml  cross_domain_sweettest.rs  lib.rs  sweettest_circular_economy.rs  sweettest_consciousness_gating.rs  sweettest_dispatch_support.rs  sweettest_food_transport.rs  sweettest_integration.rs  sweettest_property_bridge.rs  sweettest_security_hardening.rs
mycelix-core/: .dockerignore  .env.example  .gitignore  .gitmodules  .hc  .pre-commit-config.yaml  AUDIT_RECOMMENDATIONS_2026-01-04.md  CHANGELOG.md  CLAUDE.md  CLEANUP_LOG.md  CLEANUP_SUMMARY_2026-01-04.md  CONFIG_GUIDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  H-FL_Research_Paper.html  Justfile  PROJECT_STATUS.md  README.md  REORGANIZATION_PLAN.md  SECURITY_AUDIT_2026-01-17.md  TEST_GUIDE.md  attack_matrix_config.json  checkpoint_custom.pt  checkpoint_resnet18.pt  checkpoint_vit.pt  conductor-config.yaml  conftest.py  default-config.yaml  deny.toml  dna.yaml  docker-compose-distributed.yml  docker-compose-fl-network.yml  docker-compose.yml  flake.nix  gun-p2p-server.js  h-fl.dna.yaml  happ.yaml  improved_model_round_10.pth  improved_model_round_15.pth  (+24 more)
mycelix-core/.devcontainer/: Dockerfile  devcontainer.json  post-create.sh  post-start.sh  welcome.sh
mycelix-core/.github/: CODEOWNERS
mycelix-core/0TML/: .env.example  .gitignore  AEGIS_DETECTION_ANALYSIS.md  ANALYSIS_PIPELINE_READY.md  BEHAVIOR_RECOVERY_FIX_BREAKTHROUGH.md  CLEANUP_REPORT_NOV11.md  Dockerfile  Dockerfile.dev  Dockerfile.holochain  Dockerfile.prod  EXPERIMENT_STATUS_NOV11_1043.md  FINAL_SESSION_STATUS.md  GEN4_PLUS_ENSEMBLE_PROPOSAL.md  GEN5_PROGRESS_REPORT_NOV11.md  GEN5_REVOLUTIONARY_PROPOSAL.md  GEN7_HOLOCHAIN_STATUS_FOR_PAPER.md  HOLOCHAIN_RUST_INTEGRATION_ARCHITECTURE.md  IMPROVEMENT_PLAN_DEC2025.md  IMPROVEMENT_ROADMAP.md  LABEL_SKEW_ANALYSIS_AND_RECOMMENDATIONS.md  LABEL_SKEW_DIAGNOSTIC_REPORT.md  LABEL_SKEW_SUCCESS.md  LABEL_SKEW_SWEEP_FINDINGS.md  LICENSE  MODULAR_DUAL_BACKEND_SUCCESS.md  NEXT_SESSION_PRIORITIES.md  NEXT_SESSION_QUICKSTART.md  NEXT_STEPS_GEN7_INTEGRATION.md  PAPER_COMPLETION_REPORT_NOV11.md  PAPER_QUICK_ACCESS.md  PAPER_VALIDATION_REPORT.md  PHASE_A_V2_ANALYSIS.md  PHASE_A_V3_ANALYSIS.md  PHASE_A_V4_ANALYSIS.md  PHASE_A_V4_CHANGES.md  PHASE_A_V5_ANALYSIS.md  POST_PUSH_IMPROVEMENT_PLAN.md  PRODUCTION_ACTION_PLAN.md  PRODUCTION_READINESS_REVIEW.md  PRODUCTION_READINESS_ROADMAP.md  (+118 more)
mycelix-core/architecture/: clustermap.yaml
mycelix-core/benchmarks/: __init__.py  harness.py  requirements.txt  run_benchmarks.py
mycelix-core/config/: __init__.py  default.yaml  schema.json  validator.py
mycelix-core/contracts/: .env.example  .gitignore  .gitmodules  DEMO.md  DEPLOYMENT_READY.md  DEPLOY_NOW.md  ETHEREUM_BRIDGE_GUIDE.md  README.md  deploy-amoy.sh  deploy-sepolia.sh  foundry.toml  remappings.txt  setup.sh  shell.nix
mycelix-core/coordinator/: __init__.py
mycelix-core/deployment/: .env.example  CRISIS_RUNBOOKS.md  DEPLOYMENT_CHECKLIST.md  DISASTER_RECOVERY.md  Dockerfile  README.md  (+8 more)
mycelix-craft/: Cargo.toml  README.md  deny.toml  happ.yaml
mycelix-energy/: Cargo.toml  README.md  deny.toml  flake.nix  happ.yaml
mycelix-finance/: Cargo.toml  README.md  TESTING.md  deny.toml  flake.nix  happ.yaml  justfile
mycelix-governance/: ANTI_TYRANNY_DESIGN.md  CONSTITUTIONAL_ALIGNMENT.md  Cargo.toml  README.md  deny.toml  flake.nix  happ.yaml  justfile
mycelix-hearth/: Cargo.toml  README.md  deny.toml  flake.nix  happ.yaml
mycelix-identity/: .hc  Cargo.toml  README.md  deny.toml  flake.nix  happ.yaml  result
mycelix-knowledge/: CHANGELOG.md  Cargo.toml  README.md  deny.toml  dna.yaml  flake.nix  happ.yaml  vitest.config.ts
mycelix-manufacturing/: Cargo.toml
mycelix-personal/: Cargo.toml  deny.toml  flake.nix  happ.yaml
mycelix-praxis/: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  Cargo.toml  GOVERNANCE.md  Makefile  README.md  REVOLUTIONARY_FEATURES.md  ROADMAP.md  SECURITY.md  STRATEGIC_IMPROVEMENT_PLAN.md  codecov.yml  conductor-config-prod.yaml  conductor-config.yaml  deny.toml  docker-compose.prod.yml  docker-compose.yml  flake.nix  test-conductor.mjs
(+13539 files in other folders)
