[workspace]
resolver = "2"
members = [
    "zomes/registry/integrity",
    "zomes/registry/coordinator",
    "zomes/usage/integrity",
    "zomes/usage/coordinator",
    "zomes/reciprocity/integrity",
    "zomes/reciprocity/coordinator",
]
exclude = ["tests", "cli", "verifier", "prover", "stark-common"]

[workspace.package]
license = "AGPL-3.0-or-later"

[workspace.dependencies]
hdk = "0.6.0"
hdi = "0.7.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
holochain_serialized_bytes = "0.0.56"
getrandom_03 = { package = "getrandom", version = "0.3" }

[profile.dev]
opt-level = "z"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
debug = false
