[workspace]
resolver = "2"
members = [
    "zomes/shared",
    "zomes/projects/integrity",
    "zomes/projects/coordinator",
    "zomes/investments/integrity",
    "zomes/investments/coordinator",
    "zomes/regenerative/integrity",
    "zomes/regenerative/coordinator",
    "zomes/grid/integrity",
    "zomes/grid/coordinator",
    "zomes/bridge/integrity",
    "zomes/bridge/coordinator",
]
exclude = ["tests"]

[workspace.package]
license = "AGPL-3.0-or-later"

[workspace.dependencies]
# Holochain 0.6 compatible
hdk = "0.6.0"
hdi = "0.7.0"

# Required by hdk macros
holochain_serialized_bytes = "0.0.56"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Bridge
mycelix-bridge-common = { path = "../crates/mycelix-bridge-common" }

# Utilities
thiserror = "1.0"
derive_more = "0.99"

# WASM compatibility - getrandom 0.3 with custom backend (HDK provides __getrandom_v03_custom)
# NOTE: Do NOT use features = ["js"] or ["wasm_js"] - they pull in wasm-bindgen
# which is incompatible with Holochain's WASM runtime.
getrandom_03 = { package = "getrandom", version = "0.3" }

[profile.dev]
opt-level = "z"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
debug = false
