[workspace]
resolver = "2"
members = [
    "types",
    "crates/finance-wire-types",
    "crates/finance-leptos-types",
    "zomes/shared",
    "zomes/payments/integrity",
    "zomes/payments/coordinator",
    "zomes/treasury/integrity",
    "zomes/treasury/coordinator",
    "zomes/bridge/integrity",
    "zomes/bridge/coordinator",
    "zomes/staking/integrity",
    "zomes/staking/coordinator",
    "zomes/tend/integrity",
    "zomes/tend/coordinator",
    "zomes/recognition/integrity",
    "zomes/recognition/coordinator",
    "zomes/currency-mint/integrity",
    "zomes/currency-mint/coordinator",
    "zomes/price-oracle/integrity",
    "zomes/price-oracle/coordinator",
]
exclude = ["tests"]

[workspace.package]
license = "AGPL-3.0-or-later"

[workspace.dependencies]
# Holochain 0.6 compatible (per official compatibility table)
hdk = "0.6.0"
hdi = "0.7.0"
holochain_integrity_types = "0.6.0"
holochain_serialized_bytes = "0.0.56"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Bridge
mycelix-bridge-common = { path = "../crates/mycelix-bridge-common" }
mycelix-bridge-entry-types = { path = "../crates/mycelix-bridge-entry-types" }

# Utilities
chrono = "0.4"
thiserror = "1.0"
derive_more = "0.99"

# WASM compatibility - getrandom 0.3 with custom backend (HDK provides __getrandom_v03_custom)
# NOTE: Do NOT use features = ["js"] or ["wasm_js"] - they pull in wasm-bindgen
# which is incompatible with Holochain's WASM runtime.
getrandom_03 = { package = "getrandom", version = "0.3" }

# ZKP verification for transaction privacy
mycelix-zkp-core = { path = "../crates/mycelix-zkp-core" }

[profile.dev]
opt-level = "z"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
debug = false
