[workspace]
resolver = "2"
members = [
    "zomes/proposals/integrity",
    "zomes/proposals/coordinator",
    "zomes/voting/integrity",
    "zomes/voting/coordinator",
    "zomes/execution/integrity",
    "zomes/execution/coordinator",
    "zomes/constitution/integrity",
    "zomes/constitution/coordinator",
    "zomes/bridge/integrity",
    "zomes/bridge/coordinator",
    "zomes/threshold-signing/integrity",
    "zomes/threshold-signing/coordinator",
    "zomes/councils/integrity",
    "zomes/councils/coordinator",
    "crates/governance-utils",
]
exclude = ["tests"]

[workspace.dependencies]
# Holochain 0.6 compatible (per official compatibility table)
hdk = "0.6.0"
hdi = "0.7.0"
# Mycelix Core Types for collective sensing integration
mycelix-core-types = { path = "../crates/mycelix-core-types", features = ["serde"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
thiserror = "1.0"

# Holochain serialized bytes for entry serialization
holochain_serialized_bytes = "0.0.56"

# WASM compatibility - getrandom 0.3 with custom backend (HDK provides __getrandom_v03_custom)
# NOTE: Do NOT use features = ["js"] or ["wasm_js"] - they pull in wasm-bindgen
# which is incompatible with Holochain's WASM runtime.
getrandom_03 = { package = "getrandom", version = "0.3" }

# Feldman DKG for threshold signing (WASM-compatible, no getrandom 0.2)
feldman-dkg = { path = "../crates/feldman-dkg", features = ["ml-kem-768", "ml-dsa-65"] }

# ECDSA signature verification (secp256k1)
k256 = { version = "0.13", default-features = false, features = ["arithmetic", "ecdsa"] }

# Shared governance utilities
governance-utils = { path = "crates/governance-utils" }

[profile.dev]
opt-level = "z"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
debug = false
