[workspace]
resolver = "2"
members = [
    # Shared crates
    "crates/hearth-types",
    "crates/hearth-coordinator-common",

    # Kinship (core membership + relationships)
    "zomes/hearth-kinship/integrity",
    "zomes/hearth-kinship/coordinator",

    # Gratitude
    "zomes/hearth-gratitude/integrity",
    "zomes/hearth-gratitude/coordinator",

    # Stories
    "zomes/hearth-stories/integrity",
    "zomes/hearth-stories/coordinator",

    # Care
    "zomes/hearth-care/integrity",
    "zomes/hearth-care/coordinator",

    # Autonomy
    "zomes/hearth-autonomy/integrity",
    "zomes/hearth-autonomy/coordinator",

    # Emergency
    "zomes/hearth-emergency/integrity",
    "zomes/hearth-emergency/coordinator",

    # Decisions
    "zomes/hearth-decisions/integrity",
    "zomes/hearth-decisions/coordinator",

    # Resources
    "zomes/hearth-resources/integrity",
    "zomes/hearth-resources/coordinator",

    # Milestones
    "zomes/hearth-milestones/integrity",
    "zomes/hearth-milestones/coordinator",

    # Rhythms
    "zomes/hearth-rhythms/integrity",
    "zomes/hearth-rhythms/coordinator",

    # Unified bridge
    "zomes/hearth-bridge/integrity",
    "zomes/hearth-bridge/coordinator",
]
exclude = ["tests"]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
# Holochain 0.6 compatible
hdk = "0.6.0"
hdi = "0.7.0"
holochain_integrity_types = "0.6.0"
holochain_serialized_bytes = "0.0.56"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
thiserror = "1.0"
derive_more = "0.99"

# WASM compatibility
getrandom_03 = { package = "getrandom", version = "0.3" }

# Internal shared crates
hearth-types = { path = "crates/hearth-types" }
hearth-coordinator-common = { path = "crates/hearth-coordinator-common" }
mycelix-bridge-common = { path = "../crates/mycelix-bridge-common" }
mycelix-bridge-entry-types = { path = "../crates/mycelix-bridge-entry-types" }

[profile.dev]
opt-level = "z"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
debug = false
