[workspace]
resolver = "2"
# Tests excluded from WASM workspace (use different deps)
exclude = ["tests", "cli"]
members = [
    # Shared crypto-agile types (PQE abstraction layer)
    "crates/mycelix-crypto",
    # Zomes
    "zomes/did_registry/integrity",
    "zomes/did_registry/coordinator",
    "zomes/credential_schema/integrity",
    "zomes/credential_schema/coordinator",
    "zomes/revocation/integrity",
    "zomes/revocation/coordinator",
    "zomes/recovery/integrity",
    "zomes/recovery/coordinator",
    "zomes/bridge/integrity",
    "zomes/bridge/coordinator",
    "zomes/trust_credential/integrity",
    "zomes/trust_credential/coordinator",
    "zomes/verifiable_credential/integrity",
    "zomes/verifiable_credential/coordinator",
    # Legacy Bridge: Academic Credentials
    "zomes/education/integrity",
    "zomes/education/coordinator",
    # MFDI v1.0 - Multi-Factor Authentication
    "zomes/mfa/integrity",
    "zomes/mfa/coordinator",
    # Name Registry
    "zomes/name-registry/coordinator",
    "zomes/name-registry/integrity",
    # Web of Trust
    "zomes/web-of-trust/coordinator",
    "zomes/web-of-trust/integrity",
]

[workspace.dependencies]
# Holochain 0.6 compatible (per official compatibility table)
hdk = "0.6.0"
hdi = "0.7.0"
holochain_integrity_types = "0.6.0"
holochain_serialized_bytes = "0.0.56"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Cryptography (for ZK commitments)
sha2 = { version = "0.10", default-features = false }
subtle = { version = "2.5", default-features = false }

# Base encoding
bs58 = { version = "0.5", default-features = false, features = ["alloc"] }

# Crypto-agile abstraction layer
mycelix-crypto = { path = "crates/mycelix-crypto", default-features = false, features = ["wasm"] }

# Bridge common types (consciousness profile, routing)
mycelix-bridge-common = { path = "../crates/mycelix-bridge-common" }

# Utilities
thiserror = "1.0"
derive_more = "0.99"

# WASM compatibility - getrandom 0.3 with custom backend (HDK provides __getrandom_v03_custom)
# NOTE: Do NOT use features = ["js"] or ["wasm_js"] - they pull in wasm-bindgen
# which is incompatible with Holochain's WASM runtime.
getrandom_03 = { package = "getrandom", version = "0.3" }

[profile.dev]
opt-level = "z"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
debug = false
