[workspace]
resolver = "2"
members = [
    # Shared crates
    "crates/personal-types",

    # Identity vault
    "zomes/identity-vault/integrity",
    "zomes/identity-vault/coordinator",

    # Health vault
    "zomes/health-vault/integrity",
    "zomes/health-vault/coordinator",

    # Credential wallet
    "zomes/credential-wallet/integrity",
    "zomes/credential-wallet/coordinator",

    # Unified bridge
    "zomes/personal-bridge/integrity",
    "zomes/personal-bridge/coordinator",
]
exclude = ["tests"]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
# Holochain 0.6 compatible
hdk = "0.6.0"
hdi = "0.7.0"
holochain_integrity_types = "0.6.0"
holochain_serialized_bytes = "0.0.56"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
thiserror = "1.0"
derive_more = "0.99"

# WASM compatibility
getrandom_03 = { package = "getrandom", version = "0.3" }

# Internal shared crates
personal-types = { path = "crates/personal-types" }
mycelix-bridge-common = { path = "../crates/mycelix-bridge-common" }
mycelix-bridge-entry-types = { path = "../crates/mycelix-bridge-entry-types" }

[profile.dev]
opt-level = "z"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
debug = false
