[package]
name = "feldman-dkg"
version = "0.1.0"
edition = "2021"
description = "Feldman's Verifiable Secret Sharing for Distributed Key Generation"
license = "AGPL-3.0-or-later"
authors = ["Luminous Dynamics <contact@luminousdynamics.org>"]
repository = "https://github.com/luminous-dynamics/mycelix"
readme = "README.md"

[dependencies]
# Elliptic curve cryptography (secp256k1)
# default-features=false to avoid k256/std → elliptic-curve/std → rand_core/std → getrandom 0.2 on WASM
k256 = { version = "0.13", default-features = false, features = ["arithmetic", "ecdsa"] }
elliptic-curve = { version = "0.13", default-features = false, features = ["sec1"] }

# Hashing
sha2 = "0.10"

# Random number generation (rand_core only — no getrandom activation)
rand_core = "0.6"

# Secure memory handling
zeroize = { version = "1.7", features = ["derive"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2.0"

# Post-quantum KEM (optional, behind feature flag)
ml-kem = { version = "0.3.0-rc.0", default-features = false, optional = true }
getrandom = { version = "0.3", default-features = false, features = ["std"], optional = true }
aes-gcm = { version = "0.10", default-features = false, features = ["aes", "alloc"], optional = true }

# Post-quantum signatures (optional, behind feature flag)
ml-dsa = { version = "0.1.0-rc.7", default-features = false, features = ["alloc"], optional = true }

# rand 0.8 only on native (activates getrandom 0.2 which is incompatible with wasm32)
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rand = "0.8"

[dev-dependencies]
rand = "0.8"

[features]
default = []
std = []
ml-kem-768 = ["dep:ml-kem", "dep:getrandom", "dep:aes-gcm"]
ml-dsa-65 = ["dep:ml-dsa", "dep:getrandom"]
