[package]
name = "mycelix-bridge-common"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"
description = "Shared bridge dispatch types and utilities for Mycelix cluster DNAs"

[features]
default = ["hdk"]
hdk = ["dep:hdk"]
identity = ["ed25519-dalek"]
# Extension modules — not needed by most clusters. Enable for specialized use.
interplanetary = []     # earth_colony_protocol, interplanetary_bridge, mars_isru, planetary_governance, cross_planetary_fl
federated = []          # terrain_fl, federated_genomics, consciousness_sync
model-governance = []   # scoring_model, model_governance, shadow_evaluation
infrastructure = []     # saga, migration, merkle_timestamp, timestamp_anchor, license_enforcement
# All extensions at once
extensions = ["interplanetary", "federated", "model-governance", "infrastructure"]

[dependencies]
hdk = { version = "0.6.0", optional = true }
serde = { version = "1.0", features = ["derive"] }
blake3 = "1"
ed25519-dalek = { version = "2", optional = true }
sovereign-profile = { path = "../sovereign-profile", features = ["serde"] }

[dev-dependencies]
serde_json = "1.0"
proptest = "1"
